Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48030

Windows/MSVC2015: Assistant aborts while indexing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Tools: Assistant
    • None
    • Windows 10 MSVC 2015 64bit
    • 601668bda071bfc5cdf8534d21cf982ca92e7858, 35955d20ffac7020b5cdeebf1292151a809ee43c (qtools/5.6, 15.9.2015, 5.6)

    Description

      • Generate documentation for a module
      • Launch assistant
      • Note startup crash
        		
        		File	"..\3rdparty\clucene\src\CLucene\index\TermInfosWriter.cpp"	char *
        		Line	110	int
        		M	"file:..\3rdparty\clucene\src\CLucene\index\TermInfosWriter.cpp line:110\nterm out of order"	char [512]
        		Mes2	0x7ffe206d8dc0 "term out of order"	char *
        		StrTitle	0x7ffe206b8758 "PRECONDITION"	char *
        		Title	1	int
        		fatal	1	int
        

      Relevant commits: MSVC2015 compilation ( https://codereview.qt-project.org/#/c/113456/ ) .

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              heimrich Karsten Heimrich
              kleint Friedemann Kleint
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes