Fix build error and crashing Clucene (VS 2015).

The patch introduced with 78beb4c7d did indeed fix the build error 
with VS 2015, though it also introduced new crashes in conjunction 
with Assistant and using the full text search. 
Since no one is actively working on Assistant, resort to the other 
proposed build fix solution and simply rename the offending member. 
Thus we use the original implementation which builds and does not 
crash.

Task-number: QTBUG-48030
Change-Id: Ia6e4f55a5331e95c3d12c3f65d7a152b0a360e8b
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>