src/assistant/3rdparty/clucene/src/CLucene/debug/condition.cpp
@@ -37,7 +37,7 @@ void _Cnd_OutDebug( const char* FormattedMsg, const char* StrTitle, const char* 
 
 void __cnd_FormatDebug( const char* File, int32_t Line, int32_t Title, const char* Mes2, int32_t fatal ) {
 	char M[512];
-    char* StrTitle = NULL;
+    const char* StrTitle = NULL;
 
 	if( Mes2 )
 		_snprintf(M,512,"file:%s line:%d\n%s",File,Line,Mes2);
